# netpush

./: CLAUDE.md  Cargo.toml  README.md
docs/: config.toml.example  dns-estate.md  roadmap-prompts.md  site.toml.example  vision.md
profiles/: junos-evo.toml  junos.toml
scripts/: netbox-init-aggregates.py
src/: config.rs  discover.rs  dns_discovery.rs  fixture.rs  group.rs  live.rs  main.rs  plan.rs  reconcile.rs  site_write.rs
src/dns/: name.rs  record.rs  zone.rs
src/fabric/: collect.rs  inventory.rs  mod.rs  profile.rs  store.rs
src/sources/: dns.rs  estate.rs  inventory.rs  mod.rs  netbox.rs  probe.rs  vantage.rs
src/tui/: app.rs  draw.rs  focus.rs  graph.rs  map.rs  mod.rs  palette.rs  theme.rs  tree.rs
