# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026  Epsilon Null Operation

[package]
name = "canopy"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "Reconcile IP allocation across NetBox, DNS and the live network, then push the fixes — a TUI."

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.28"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
# Format-preserving TOML editing — used to merge the discovered DNS estate into a site
# file without clobbering its comments and layout. Same family as `toml` (0.8 uses it).
toml_edit  = "0.22"
# mullion is Roland's terminal-UI tiling engine; census is built on it too.
mullion    = { path = "../mullion", version = "0.3.0" }
# Artifact checksums for tamper-evident manifests.
sha2       = "0.10"
# UTC timestamps for snapshot ids and device-clock skew.
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
